--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,22 @@
   volume = {8},
   doi = {10.1186/s13617-019-0085-5},
 }
+
+@misc{appleton2020Brief,
+	title = {A Brief History & Ethos of the Digital Garden: A newly revived philosophy for publishing personal knowledge on the web},
+	author = {Appleton, Maggie},
+	year = {2020},
+	date = {2020},
+	url = {https://maggieappleton.com/garden-history},
+	note = {Citation Key: appleton2020Brief}
+}
+
+@misc{rodenbroker2023How,
+	title = {How I built myself a Digital Garden},
+	author = {{Rodenbröker}, Tim},
+	year = {2023},
+	month = {10},
+	date = {2023-10-08},
+	url = {https://downgrade.timrodenbroeker.de/posts/digital-garden/},
+	note = {Citation Key: rodenbroker2023How}
+}
